--- a/websites/default/index.html
+++ b/websites/default/index.html
@@ -556,6 +556,10 @@
         &:has(input:checked) {
           color: var(--color);
         }
+
+        [data-screenshot="true"] &:has(input:not(:checked)) {
+          display: none;
+        }
       }
 
       main {
@@ -971,7 +975,6 @@
         flex-shrink: 0;
         display: flex;
         align-items: center;
-        gap: 1.5rem;
         margin: -0.5rem var(--negative-main-padding);
         padding: 0.75rem var(--main-padding);
         overflow-x: auto;
@@ -989,13 +992,33 @@
         margin-top: 2rem;
         margin-bottom: 1rem;
 
+        button#screenshot {
+          width: 100%;
+          text-align: left;
+          padding-left: 1rem;
+          height: 100%;
+          font-size: var(--font-size-sm);
+          line-height: var(--line-height-sm);
+
+          [data-screenshot="true"] & {
+            display: none;
+          }
+        }
+
         > legend {
+          gap: 1.5rem;
+
           &:empty {
             display: none;
           }
 
           > div {
+            [data-screenshot="true"] &:has(input:not(:checked)) {
+              display: none;
+            }
+
             flex: 0;
+            height: 100%;
             display: flex;
             align-items: center;
 
@@ -1033,6 +1056,11 @@
               padding-right: 0.375rem;
               margin-left: -0.375rem;
               margin-right: -0.375rem;
+
+              [data-screenshot="true"] & {
+                width: 0;
+                opacity: 0;
+              }
             }
           }
         }
@@ -1118,6 +1146,16 @@
         width: 100%;
         min-height: 0;
         padding: var(--main-padding);
+        background-color: var(--background-color);
+
+        p#domain {
+          position: absolute;
+          left: 2rem;
+          top: 0.75rem;
+          color: var(--gray);
+          font-size: var(--font-size-sm);
+          line-height: var(--line-height-sm);
+        }
 
         header {
           flex-shrink: 0;
@@ -1139,6 +1177,17 @@
 
         .chart {
           flex: 1;
+        }
+
+        #interval {
+          > span {
+            display: none;
+
+            [data-screenshot="true"] & {
+              color: var(--gray);
+              display: inline-block;
+            }
+          }
         }
 
         > .chart > legend,
