global: added datasets

--- a/websites/bitview/index.html
+++ b/websites/bitview/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <meta name="description" content="Bitcoin with X-ray vision" />
+    <meta name="description" content="Bitcoin transparency, amplified" />
     <meta
       name="viewport"
       content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no"
@@ -449,7 +449,7 @@
         text-transform: uppercase;
         font-size: var(--font-size-xl);
         line-height: var(--line-height-xl);
-        font-weight: 325;
+        font-weight: 350;
       }
 
       h3 {
@@ -1745,7 +1745,9 @@
       <div class="shadow-bottom"></div>
       <div id="resize-bar"></div>
 
-      <nav id="nav" hidden></nav>
+      <nav id="nav" hidden>
+        <!-- <h4>bitview</h4> -->
+      </nav>
 
       <search id="search" hidden>
         <header>
