server: fix urls in readme

--- a/websites/custom/index.html
+++ b/websites/custom/index.html
@@ -35,7 +35,7 @@
       chartOptions,
     );
 
-    const baseURL = "https://bitview.space/api";
+    const baseURL = "https://bitcoinresearchkit.org/api";
 
     const minDate = "2022-11-09";
     // const minDate = "2023-11-09";
