global: snapshot + pools + fixes

--- a/websites/bitview/index.html
+++ b/websites/bitview/index.html
@@ -1266,7 +1266,7 @@
           }
 
           td {
-            text-transform: lowercase;
+            text-transform: none;
           }
 
           a {
