bitview: reorg part 9

--- a/websites/bitview/index.html
+++ b/websites/bitview/index.html
@@ -991,7 +991,7 @@
       }
 
       .chart > legend,
-      #charts > fieldset {
+      #chart > fieldset {
         text-transform: lowercase;
         flex-shrink: 0;
         display: flex;
@@ -1161,7 +1161,7 @@
         }
       }
 
-      #charts {
+      #chart {
         display: flex;
         flex-direction: column;
         height: 100%;
@@ -1824,7 +1824,7 @@
     </main>
     <aside id="aside">
       <div id="explorer" hidden></div>
-      <div id="charts" hidden></div>
+      <div id="chart" hidden></div>
       <div id="table" hidden></div>
       <div id="simulation" hidden></div>
     </aside>
