--- a/websites/bitview/index.html
+++ b/websites/bitview/index.html
@@ -222,21 +222,21 @@
         --black: oklch(15% 0.005 44);
         --red: oklch(0.607 0.241 26.328);
         --orange: oklch(67.64% 0.191 44.41);
-        --amber: oklch(0.7175 0.1835 64.199);
+        --amber: oklch(0.7175 0.1835 64.199); /* #f08500 */
         --yellow: oklch(0.738 0.173 80.9405);
         --avocado: oklch(0.72 0.19 110);
-        --lime: oklch(0.708 0.2165 131.267);
+        --lime: oklch(0.708 0.2165 131.267); /* #6dba00 */
         --green: oklch(0.675 0.2065 149.3965);
         --emerald: oklch(0.646 0.1575 162.8525);
         --teal: oklch(0.652 0.129 183.6035);
-        --cyan: oklch(0.662 0.1345 218.472);
+        --cyan: oklch(0.662 0.1345 218.472); /* #00a5ca */
         --sky: oklch(0.6365 0.1635 239.6445);
         --blue: oklch(0.5845 0.2295 261.348);
         --indigo: oklch(0.548 0.2475 277.0415);
-        --violet: oklch(0.5735 0.2655 292.863);
-        --purple: oklch(0.5925 0.2765 303.1105);
+        --violet: oklch(0.5735 0.2655 292.863); /* #863dff */
+        --purple: oklch(0.5925 0.2765 303.1105); /* #a232ff */
         --fuchsia: oklch(0.629 0.294 322.523);
-        --pink: oklch(0.624 0.245 357.444);
+        --pink: oklch(0.624 0.245 357.444); /* #ee1988 */
         --rose: oklch(0.6155 0.2495 17.012);
         --background-color: light-dark(var(--white), var(--black));
         --color: light-dark(var(--black), var(--white));
