--- a/website/index.html
+++ b/website/index.html
@@ -17,6 +17,10 @@
     <link rel="stylesheet" href="/styles/variables.css" />
     <link rel="stylesheet" href="/styles/elements.css" />
     <link rel="stylesheet" href="/styles/components.css" />
+    <link rel="stylesheet" href="/styles/main.css" />
+    <link rel="stylesheet" href="/styles/nav.css" />
+    <link rel="stylesheet" href="/styles/search.css" />
+    <link rel="stylesheet" href="/styles/chart.css" />
     <link rel="stylesheet" href="/styles/panes/chart.css" />
     <!-- /IMPORTMAP -->
 
@@ -83,8 +87,6 @@
   </head>
   <body>
     <main id="main">
-      <div class="shadow-top"></div>
-      <div class="shadow-bottom"></div>
       <div id="resize-bar"></div>
 
       <nav id="nav" hidden></nav>
@@ -107,8 +109,6 @@
       </search>
 
       <footer>
-        <div class="shadow-left"></div>
-        <div class="shadow-right"></div>
         <fieldset id="frame-selectors">
           <label
             id="aside-selector-label"
@@ -153,7 +153,6 @@
       <div id="explorer" hidden></div>
       <div id="chart" hidden></div>
       <div id="table" hidden></div>
-      <div id="simulation" hidden></div>
     </aside>
     <div id="share-div" hidden>
       <div id="share-content-div">
